tests/baselines/reference/assignmentToReferenceTypes.errors.txt
assignmentToReferenceTypes.ts(5,1): error TS2708: Cannot use namespace 'M' as a value.
assignmentToReferenceTypes.ts(9,1): error TS2629: Cannot assign to 'C' because it is a class.
assignmentToReferenceTypes.ts(13,1): error TS2628: Cannot assign to 'E' because it is an enum.
assignmentToReferenceTypes.ts(16,1): error TS2630: Cannot assign to 'f' because it is a function.


==== assignmentToReferenceTypes.ts (4 errors) ====
    // Should all be allowed
    
    module M {
    }
    M = null;
    ~
!!! error TS2708: Cannot use namespace 'M' as a value.
    
    class C {
    }
    C = null;
    ~
!!! error TS2629: Cannot assign to 'C' because it is a class.
    
    enum E {
    }
    E = null;
    ~
!!! error TS2628: Cannot assign to 'E' because it is an enum.
    
    function f() { }
    f = null;
    ~
!!! error TS2630: Cannot assign to 'f' because it is a function.
    
    var x = 1;
    x = null;
    
    function g(x) {
        x = null;
    }